--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <section>
       <h2>Contact</h2>
-      <p>Email: anil@example.com</p>
+      <p>Email: anil.github@proton.me</p>
       <p>GitHub: <a href="https://github.com/anilnimmagadda" target="_blank">@anilnimmagadda</a></p>
     </section>
   </main>
