--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <body>
   <header>
     <h1>Anil Nimmagadda</h1>
-    <p>AI | Quantum | GPTs | Legacy Architect</p>
+    <p>AI | Quantum | GPTs</p>
   </header>
 
   <main>
@@ -63,7 +63,6 @@
         <li>RadarOne — AI trend intelligence</li>
         <li>QuantumLab — educational resources and scripts</li>
         <li>Club Porsche Neunelfer — a custom GPT for enthusiasts</li>
-        <li>Trini-Saptha — legacy wealth frameworks</li>
       </ul>
     </section>
 
