--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <main>
     <section>
       <h2>Welcome</h2>
-      <p>This is the personal site of Anil Nimmagadda — a thinker, builder, and strategist exploring the frontiers of AI, quantum computing, and generational wealth design. Stay tuned for projects, writing, and prototypes.</p>
+      <p>This is the personal site of Anil Nimmagadda — a thinker, builder, and strategist exploring the frontiers of AI and quantum computing. Stay tuned for projects, writing, and prototypes.</p>
     </section>
 
     <section>
